# debiantospdx

./: .gitignore  README.md  depends.json  pyproject.toml
SPDX/temp1/: alsa-topology-conf.spdx  aptdaemon-data.spdx  bash-completion.spdx  binutils-common.spdx  colord-data.spdx  cups-common.spdx  cups-server-common.spdx  distro-info-data.spdx  dns-root-data.spdx  emacsen-common.spdx  espeak-ng-data.spdx  evince-common.spdx  fonts-dejavu-core.spdx  fonts-freefont-ttf.spdx  fonts-liberation.spdx  fonts-noto-mono.spdx  fonts-urw-base35.spdx  gcc-11-base.spdx  gcc-12-base.spdx  gir1.2-gdesktopenums-3.0.spdx  git-man.spdx  gnome-bluetooth-3-common.spdx  gnome-bluetooth-common.spdx  gnome-control-center-faces.spdx  gnome-desktop3-data.spdx  gnome-session-common.spdx  gnupg-l10n.spdx  gsfonts.spdx  hicolor-icon-theme.spdx  iso-codes.spdx  klibc-utils.spdx  libao-common.spdx  libatk1.0-data.spdx  libaudit-common.spdx  libavahi-common-data.spdx  libclutter-1.0-common.spdx  libcogl-common.spdx  libdbusmenu-glib4.spdx  libdjvulibre-text.spdx  libdrm-common.spdx  (+56 more)
debiantospdx/: __init__.py  __main__.py  cli.py  control_to_dict.py  deb_spdx.py  dict_to_tv.py  for_sigma.py  main.py  make_tv_dict.py  search.py  spdx_exist.py  test.py  tv_to_dict.py
template/: __main__.py  cli.py  joblib_sigma.py
tests/: __init__.py  test_sigma.py
