[tool.poetry]
name = "debiantospdx"
version = "0.1.10"
description = "This tool generate SPDX files from your Debian system / packages"
authors = ["tk-tanab <tk-tanab@ist.osaka-u.ac.jp>"]
readme = "README.md"
repository = "https://github.com/tk-tanab/debiantospdx"
homepage = "https://github.com/tk-tanab/debiantospdx"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
scancode-toolkit = "31.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^6.0.0"
mypy = "^0.991"
isort = "^5.10.1"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
exclude = ".venv"

[tool.mypy]
exclude = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
debiantospdx = "debiantospdx.cli:entry"
